# HeightNWeight

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  clean.py  data.csv  exec.py  group.csv  group_clean.py  linear.py  pre.py  pure.csv  pyproject.toml  test.py  util.py
.github/workflows/: qa.yml
trained_models/: LinearRegression-group-debug.pickle  LinearRegression-pure-debug.pickle  LinearRegression-pure.pickle  LogisticRegression-pure-debug.pickle  LogisticRegression-pure.pickle
trained_models_backup/: LinearRegression-group.pickle  LogisticRegression-group-debug.pickle  LogisticRegression-group.pickle
