[tool.poetry]
name = "heightnweight"
version = "0.1.0"
description = "Predict gender by taking weight and height as inputs"
authors = ["Sasindu Wijethunga <e22445@eng.pdn.ac.lk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
tensorflow = "2.16.1"
numpy = "1.26.4"
keras = "3.3.3"
pandas = "2.2.1"
scikit-learn = "^1.5.0"


[tool.poetry.group.dev.dependencies]
flake8 = "7.0.0"
pre-commit = "3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
